# rotor

./: Cargo.toml
src/: main.rs  shadowsockts.rs
src/common/: httputil.rs  mod.rs
src/dashboard/: mod.rs  vpn.rs
src/openapi/: healthcheck.rs  mod.rs  route.rs  subscribe.rs
src/proxy/: model.rs
