[package]
name = "rotor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
#reqwest = "0.11.18"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1", features = ["full"] }