[package]
name = "rotor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
#reqwest = "0.11.18"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
dotenvy = "0.15"
bytes = "1.4.0"
futures-util = "0.3.28"
serde_json = "1.0.104"
serde = { version = "1.0.104", features = ["derive"] }
##